# cpos_v2

./: .gitignore  .sourcery.yaml  Dockerfile  README.md  TODO.md  docker-compose-local.yml  docker-compose.yml  log.txt  node.py  notes.md  pyproject.toml  setup.py  test.py
cpos/: beacon.py  main.py  node.py
cpos/core/: block.py  blockchain.py  sortition.py  transactions.py
cpos/db/: localBlockchain.sql  mempool.sql
cpos/net/: __init__.py  channel.py
cpos/p2p/: client.py  network.py  peer.py  server.py
cpos/p2p/discovery/: beacon.py  client.py  messages.py
cpos/protocol/: message.py  messages.py  rpc.py
cpos/util/: merkle.py
demo/: beacon.py  block_db.py  blockchain_db.py  main.py  populate_mempool.py  process_data.py  process_data2.py  run_beacon.sh  run_experiments.sh  run_node.sh  run_security_experiments.sh  send_data.py
test/: test_node.py
test/core/: test_block.py  test_blockchain.py  test_sortition.py
test/net/: test_channel.py
test/p2p/: test.py  test_network.py
test/protocol/: test_message.py  test_messages.py
test/util/: test_merkle.py
