[tool.poetry]
name = "cpos"
version = "0.1.0"
description = "Python implementation of the CPoS protocol"
authors = ["Vinicius Peixoto <nukelet@protonmail.com>", "Matheus Acaua <matheusacauadias98@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

packages = [{include = "cpos"}]

[tool.poetry.dependencies]
python = "^3.10"
pyzmq = "^24.0.1"
cryptography = "^40.0.2"
jsonpickle = "^3.0.1"
matplotlib = "^3.7.1"
graphviz = "^0.20.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
